--- a/TreeProto.html
+++ b/TreeProto.html
@@ -15,13 +15,21 @@
 		<script src="Tree.Debug.js"></script>
 		<script src="Tree.ext.js"></script>
 		<script src="TreeApp.js"></script>
+		<script src="lodash.js"></script>
+		<script src="MV.js"></script>
 
 		<script src="Kai.js"></script>
 		<script src="Perlin.js"></script>
 
 		<script>
 			var gModel;
-
+			//벚꽃 생성관련
+			// k = amount of the blossom
+			//saveScene -> 벚꽃을 만들때마다 씬에서 벚꽃데이터를 밀어주지 않으면 벚꽃이 계속 있게 되는데 그 용도
+			var k = 0;
+			var saveScene;
+			var saveLoc = [0, 0, 0];
+			var m;
 			window.addEventListener("load",function(){
 				TreeApp.startup();
 
@@ -89,15 +97,32 @@
 
 				gModel.update();
 				TreeApp.scene.push(gModel);
-
 			//////////////////////
-				for(var i=0; i < 70; i++){
-					planet = new Tree.Renderable(Tree.Primatives.PolarSphere(5, 5, 0.1),"MatLowStar");
-					planet.position.set(Kai.Rnd(-5,5),Kai.Rnd(5,12),Kai.Rnd(-5,5));
-					TreeApp.scene.push(planet);
-				}
-				//.......................................................
-				//Start Render Loop
+				//초기에 k에 설정된 값은 0 -> 벚꽃 없음
+				//increase button 누르면 70개씩 늘어남
+				//decrease button 누르면 70개씩 줄어듦
+				//clear button누르면 벚꽃 사라짐
+				// blossomGone누르면 애들이 옆으로 푸슝 하고 날아감.
+				m = mat4();
+				document.getElementById( "increaseBlossom" ).onclick = function () {
+					k += 70;
+					Blossom(k);
+				};
+				document.getElementById( "decreaseBlossom" ).onclick = function () {
+					k -= 70;
+					Blossom(k);
+				};
+				document.getElementById( "clearBlossom" ).onclick = function () {
+					k = 0;
+					Blossom(k);
+				};
+				// document.getElementById( "blossomGone" ).onclick = function () {
+				// 	blossomGone(k);
+				// };
+
+				//현재 씬 상태 저장 -> blossom으로 뭐 하기전에
+				saveScene = _.cloneDeep(TreeApp.scene);
+
 				TreeApp.renderLoop.start();
 			});
 
@@ -287,11 +312,43 @@
 				model.position.z = iniPos[2];
 				TreeApp.scene.push(model);
 			}
+			function Blossom(amount){
+				//defensive codding that for amount of the blossom < 0
+				if(amount > 0){
+					for(var i=0; i < amount; i++){
+						planet = new Tree.Renderable(Tree.Primatives.PolarSphere(5, 5, 0.1),"MatLowStar");
+						planet.position.set(Kai.Rnd(-5,5),Kai.Rnd(5,12),Kai.Rnd(-5,5));
+						TreeApp.scene.push(planet);
+					}
+					//.......................................................
+					//Start Render Loop
+					TreeApp.renderLoop.start();
+					// for(var j=0; j <  amount; j++){
+					// 	TreeApp.scene.pop();
+					// }
+				}
+				else{
+					TreeApp.renderLoop.start();
+				}
+			}
+			//구상 -> 벚꽃으로 아무것도 안한 scene을 저장한 상태에서 계속 해서 위치를 조금씩만 옮겨서 왼쪽 or 오른쪽으로 벚꽃이 가게 계속 rendering해주면 될 것 같은데
+			//조금만 더 생각해보자..
+			// function blossomGone(amount){
+			// 	saveLoc[0] -= 0.001;
+			// 	while(1){
+			// 			m = mult(m, translate(saveLoc, 0, 0, 0));
+			// 			planet.position = m;
+			// 			TreeApp.scene.push(planet);
+			//
+			// 			TreeApp.renderLoop.start();
+			// 	}
+			// }
 		</script>
 	</head>
 <body>
 	<div><canvas id="TreeCanvas"></canvas></div>
-	<span id="lblFPS">0</div>
+	<span id="lblFPS">0</span>
+
 
 		<script id="vertex_shader" type="x-shader/x-vertex">#version 300 es
 			layout(location=0) in vec4 a_position;
@@ -317,6 +374,7 @@
 	
 				vUV = a_uv;
 				gl_Position =  matProjection * matCameraView * uModalMatrix * vec4(a_position.xyz, 1.0);
+
 			}
 		</script>
 		<script id="fragment_shader" type="x-shader/x-fragment">#version 300 es
@@ -329,7 +387,7 @@
 				outColor = vec4(color,1.0);
 			}
 		</script>
-	
+
 	
 		<script id="vertex_lowpoly" type="x-shader/x-vertex">#version 300 es
 			layout(location=0) in vec4 a_position;
@@ -507,5 +565,11 @@
 				outColor = vec4( uColor * ((cAmbient + cDiffuse + cSpecular) * LowPolyFactor), 1.0);
 			}
 		</script>
+	<span>
+		<button id="increaseBlossom">increase blossom</button>
+		<button id="decreaseBlossom">decrease blossom</button>
+		<button id="clearBlossom">clear blossom</button>
+		<button id="blossomGone">blossom gone</button>
+	</span>
 </body>
 </html>
