--- a/TreeProto.html
+++ b/TreeProto.html
@@ -5,7 +5,7 @@
 			html,body{margin:0px; padding:0px; width:100%; height:100%;}
 			body{background-color:#404040;}
 			canvas{border:0px solid black;}
-			div{display:flex; width:100%; height:100%; align-items:center; justify-content:center;}
+			div{display:flex; width:100%; height:95%; align-items:center; justify-content:center;}
 			#lblFPS{position:absolute; top:0px; left:0px; background:gray; color:white; font-weight:bold; padding:5px 5px; width:40px; text-align:center; font-family:arial; font-size:13px;}
 		</style>
 
@@ -27,6 +27,7 @@
 			// k = amount of the blossom
 			//saveScene -> 벚꽃을 만들때마다 씬에서 벚꽃데이터를 밀어주지 않으면 벚꽃이 계속 있게 되는데 그 용도
 			var k = 0;
+			var j = 0;
 			var saveScene;
 			var saveLoc = [0, 0, 0];
 			var m;
@@ -117,6 +118,7 @@
 					Blossom(k);
 				};
 				document.getElementById( "blossomGone" ).onclick = function () {
+					j += 1;
 					blossomGone(k);
 				};
 
@@ -402,23 +404,22 @@
 			function blossomGone(amount){
 				TreeApp.scene = [];
 				//defensive codding that for amount of the blossom < 0
-				for(var l = 0; l<10; l++) {
+				for(var l = 0; l < j; l++) {
+					TreeApp.scene = [];
+
 					if (amount > 0) {
 						for (var i = 0; i < amount; i++) {
 							planet = new Tree.Renderable(Tree.Primatives.PolarSphere(5, 5, 0.1), "MatLowStar");
-							planet.position.set(Kai.Rnd(-10, 10), Kai.Rnd(7, 12) - l, Kai.Rnd(-10, 10));
+							planet.position.set(Kai.Rnd(-10, 10), Kai.Rnd(7, 12) - j, Kai.Rnd(-10, 10));
 							TreeApp.scene.push(planet);
 						}
 						//.......................................................
 						//Start Render Loop
-						TreeApp.renderLoop.start();
+						//
 						// TreeApp.renderLoop.start();
 						// for(var j=0; j < amount; j++){
 						// 	TreeApp.scene.pop();
 						// }
-					}
-					else {
-						TreeApp.renderLoop.start();
 					}
 				}
 
