--- a/TreeProto.html
+++ b/TreeProto.html
@@ -3,10 +3,14 @@
 	<head>
 		<style>
 			html,body{margin:0px; padding:0px; width:100%; height:100%;}
-			body{background-color:#404040;}
+			body{background-color:#FFFFFF;}
 			canvas{border:0px solid black;}
-			div{display:flex; width:100%; height:95%; align-items:center; justify-content:center;}
+			div{display:flex; width:100%; height:100%; align-items:center; justify-content:center;}
 			#lblFPS{position:absolute; top:0px; left:0px; background:gray; color:white; font-weight:bold; padding:5px 5px; width:40px; text-align:center; font-family:arial; font-size:13px;}
+			span.buttonTop {
+				width: 100%;
+				align-items: center; /* 가로 - 중앙으로 */
+				justify-content: flex-start; /* 세로 - 상단으로 */}
 		</style>
 
 		<script src="Tree.core.js"></script>
@@ -427,6 +431,12 @@
 		</script>
 	</head>
 <body>
+	<span class = "buttonTop">
+		<button id="increaseBlossom">increase blossom</button>
+		<button id="decreaseBlossom">decrease blossom</button>
+		<button id="clearBlossom">clear blossom</button>
+		<button id="blossomGone">blossom gone</button>
+	</span>
 	<div><canvas id="TreeCanvas"></canvas></div>
 	<span id="lblFPS">0</span>
 
@@ -646,11 +656,6 @@
 				outColor = vec4( uColor * ((cAmbient + cDiffuse + cSpecular) * LowPolyFactor), 1.0);
 			}
 		</script>
-	<span>
-		<button id="increaseBlossom">increase blossom</button>
-		<button id="decreaseBlossom">decrease blossom</button>
-		<button id="clearBlossom">clear blossom</button>
-		<button id="blossomGone">blossom gone</button>
-	</span>
+
 </body>
 </html>
