--- a/TreeProto.html
+++ b/TreeProto.html
@@ -3,10 +3,15 @@
 	<head>
 		<style>
 			html,body{margin:0px; padding:0px; width:100%; height:100%;}
-			body{background-color:#404040;}
+			body{background-color:#000031;}
 			canvas{border:0px solid black;}
-			div{display:flex; width:100%; height:95%; align-items:center; justify-content:center;}
+			div{display:flex; width:100%; height:90%; align-items:center; justify-content:center;}
 			#lblFPS{position:absolute; top:0px; left:0px; background:gray; color:white; font-weight:bold; padding:5px 5px; width:40px; text-align:center; font-family:arial; font-size:13px;}
+			img{vertical-align: bottom;background-color:transparent;object-fit: cover;}
+			span{
+				display: flex;
+				justify-content: center;
+			}
 		</style>
 
 		<script src="Tree.core.js"></script>
@@ -122,11 +127,19 @@
 					Blossom(k);
 				};
 				document.getElementById( "clearBlossom" ).onclick = function () {
+					//when click the clear button 'j' must become zero
+					j = 0;
 					k = 0;
 					Blossom(k);
 				};
 				document.getElementById( "blossomGone" ).onclick = function () {
+					//defensive codding that for the j is larger than the 12,
+					//so it looks recursive behavior even the user push the blossomGone button more that 12 times.
+					if(j == 12){
+						j = 0;
+					}
 					j += 1;
+
 					blossomGone(k);
 				};
 
@@ -436,6 +449,13 @@
 		</script>
 	</head>
 <body>
+	<span>
+		<a href="#"><img id="increaseBlossom" src="./increaseBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/></a>
+		<a href="#"><img id="decreaseBlossom" src="./decreaseBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/></a>
+		<a href="#"><img id="clearBlossom" src="./clearBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/></a>
+		<a href="#"><img id="blossomGone" src="./blossomGone.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/></a>
+
+	</span>
 	<div><canvas id="TreeCanvas"></canvas></div>
 	<span id="lblFPS">0</span>
 
@@ -653,11 +673,6 @@
 				outColor = vec4( uColor * ((cAmbient + cDiffuse + cSpecular) * LowPolyFactor), 1.0);
 			}
 		</script>
-	<span>
-		<button id="increaseBlossom">increase blossom</button>
-		<button id="decreaseBlossom">decrease blossom</button>
-		<button id="clearBlossom">clear blossom</button>
-		<button id="blossomGone">blossom gone</button>
-	</span>
+
 </body>
 </html>
