--- a/TreeProto.html
+++ b/TreeProto.html
@@ -9,6 +9,7 @@
 			#lblFPS{position:absolute; top:0px; left:0px; background:gray; color:white; font-weight:bold; padding:5px 5px; width:40px; text-align:center; font-family:arial; font-size:13px;}
 			img{vertical-align: bottom;background-color:transparent;object-fit: cover;}
 			span{
+				border: 0;
 				display: flex;
 				justify-content: center;
 			}
@@ -455,10 +456,10 @@
 			src="/sound/background_music.mp3"
 			type="audio/mpeg"></audio>
 	<span>
-		<div onclick="play(1)"><a href="#"><img id="increaseBlossom" src="./increaseBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70 /><audio id="increase_blossom" src='./sound/increase_blossom.mp3'></audio></a></div>
-		<div onclick="play(2)"><a href="#"><img id="decreaseBlossom" src="./decreaseBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/><audio id="decrease_blossom" src='./sound/decrease_blossom.mp3'></audio></a></div>
-		<div onclick="play(3)"><a href="#"><img id="clearBlossom" src="./clearBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/><audio id="clean_blossom" src='./sound/clean_blossom.mp3'></audio></a></div>
-		<div onclick="play(4)"><a href="#"><img id="blossomGone" src="./blossomGone.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/></a></div>
+		<sapn onclick="play(1)"><a href="#"><img id="increaseBlossom" src="./increaseBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70 /><audio id="increase_blossom" src='./sound/increase_blossom.mp3'></audio></a></sapn><!--
+		--><span onclick="play(2)"><a href="#"><img id="decreaseBlossom" src="./decreaseBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/><audio id="decrease_blossom" src='./sound/decrease_blossom.mp3'></audio></a></span><!--
+		--><span onclick="play(3)"><a href="#"><img id="clearBlossom" src="./clearBlossom.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/><audio id="clean_blossom" src='./sound/clean_blossom.mp3'></audio></a></span><!--
+		--><span onclick="play(4)"><a href="#"><img id="blossomGone" src="./blossomGone.png" alt="" onclick="clickBtn();" border="0" width = 70 height = 70/></a></span>
 
 	</span>
 	<script type="text/javascript">
